<resources>
    <string name="app_name" translatable="false">LuckyTool</string>
    <string name="xposeddescription">Xposed module for extended optimization of ColorOS, free forever\nIt is forbidden to share, reprint, steal and sell and other illegal purposes\nDeveloper: luckyzyx</string>
    <string name="sharedUserLabel" translatable="false">LuckyTool user</string>
    <string name="nav_function">Function</string>
    <string name="nav_home">Home page</string>
    <string name="nav_other">Other</string>
    <string name="nav_log">Logs</string>
    <string name="nav_setting">Settings</string>
    <string name="fragment_source">SourceCode</string>
    <string name="theme_title">Theme</string>
    <string name="theme_title_summary">Page will be automatically refreshed</string>
    <string name="use_dynamic_color">Dynamic colors</string>
    <string name="use_dynamic_color_summary">Use dynamic colors</string>
    <string name="dark_theme">Dark theme</string>
    <string name="follow_system">Follow system</string>
    <string name="dark_theme_off">Always off</string>
    <string name="dark_theme_on">Always on</string>
    <string name="dark_theme_follow_system" translatable="false">@string/follow_system</string>
    <string name="language">Language</string>
    <string name="privacy_agreement">Privacy Agreement</string>
    <string name="auto_check_update">Automatically check for updates</string>
    <string name="auto_check_update_summary">Automatically check for updates when opening the module home page</string>
    <string name="enable_biometric_unlock_verification">Enable biometric unlock verification</string>
    <string name="tile_auto_start">Allow built-in tiles to start automatically</string>
    <string name="tile_auto_start_summary">Enabled tile features will be automatically triggered after the screen is unlocked.\nIf the trigger fails,please restart the scope and check Root permissions</string>
    <string name="check_app_userid">Cannot be used by clone users</string>
    <string name="read_agreement">You need to read and agree to the following content before you can use this module</string>
    <string name="clear_all_data">Clear all data</string>
    <string name="clear_all_data_summary">Clear all function data in the module</string>
    <string name="clear_all_data_message">Make sure you want to clear all the function data of the module, and you need to reset the function after clearing?</string>
    <string name="other_settings">Other settings</string>
    <string name="enable_module_print_logs">Enable module print logs</string>
    <string name="enable_module_print_logs_summary">This function is only used to print the running log of the module App itself.\nLog files will be obtained when this switch is turned off.</string>
    <string name="switch_autostart_function_caller">Switch autostart function caller</string>
    <string name="switch_autostart_function_caller_summary">1.The module calling method will open a new page of the module and trigger the self-starting function,This method may cause the screen to be untouchable for a few seconds when it is unlocked\n2.The system ui calling method will call the self-starting function on the process of the system ui,Need to give root permission to the system ui,Otherwise, the autostart cannot be triggered</string>
    <string name="switch_autostart_function_caller_module">Module call</string>
    <string name="switch_autostart_function_caller_systemui">SystemUI call</string>
    <string name="hide_function_page_icon">Hide function page icon</string>
    <string name="hide_desktop_module_icon">Hide desktop module icon</string>
    <string name="hide_desktop_module_icon_summary">LSPosed must be turned off to force desktop icons</string>
    <string name="backup_restore_clear">Backup/Restore/Clear</string>
    <string name="get_log_cat_log">Get LogCat log</string>
    <string name="backup_data">Backup Data</string>
    <string name="restore_data">Restore Data</string>
    <string name="data_backup_complete">Data backup completed!</string>
    <string name="data_backup_error">Data backup error!</string>
    <string name="data_restore_complete">Data restore complete!</string>
    <string name="data_backup_data_version">Backup data version</string>
    <string name="data_current_system_version">Current system version</string>
    <string name="data_restore_version_tips">Restoring data across versions may cause some functions to run abnormally. It is recommended to reconfigure module function data.</string>
    <string name="about_title">About</string>
    <string name="about_author">Author</string>
    <string name="donate">Donate reward</string>
    <string name="donate_message">Be sure to note your nickname or ID when donating</string>
    <string name="donate_summary">Your donation will be the driving force for the module update</string>
    <string name="qq" translatable="false">QQ</string>
    <string name="wechat">WeChat</string>
    <string name="alipay">AliPay</string>
    <string name="patreon" translatable="false">Patreon</string>
    <string name="paypal" translatable="false">PayPal</string>
    <string name="donation_list">Donation List</string>
    <string name="feedback_download">Feedback and Download</string>
    <string name="feedback_download_summary">TG Channels, Groups, Repositories, etc.</string>
    <string name="coolmarket">Cool Home Page</string>
    <string name="module_doc">Module Doc</string>
    <string name="qq_chat_group">QQ Chat Group</string>
    <string name="qq_channel">QQ Channel</string>
    <string name="telegram_channel">Telegram Channel</string>
    <string name="telegram_group">Telegram Group</string>
    <string name="lsposed_repo">LSPosed Repository</string>
    <string name="github_repo">Github Repository</string>
    <string name="open_source">Open Source</string>
    <string name="open_source_summary">Click to view the open source list</string>
    <string name="participate_translation">Participate in module translations</string>
    <string name="participate_translation_summary">Go to Github to contribute your translation</string>
    <string name="system_not_support">The current system does not support!</string>
    <string name="unsupported_xposed">Module not activated detected.\nPlease use the LSPosed framework for activation after activation!</string>
    <string name="unsupported_os">Unsupported system</string>
    <string name="unsupported_os_summary">Because the module only supports ColorOS 12 and above systems, please be sure to take security measures!</string>
    <string name="no_root">No Root permission</string>
    <string name="no_root_summary">Root permission is not detected, some functions will not be available!</string>
    <string name="menu_reboot">Restart menu</string>
    <string name="menu_search">Search menu</string>
    <string name="menu_settings">Set menu</string>
    <string name="restart_scope">Restart scoped processes</string>
    <string name="re_optimize_dex">Re-optimize Dex</string>
    <string name="need_restart_scope">Need to restart scope</string>
    <string name="need_restart_system">Need to restart system</string>
    <string name="restart_scope_message">Are you sure you want to restart all scoped processes except the system framework?\nUse this if the module isn\'t working!\nMake sure all the relevant scopes are checked!</string>
    <string name="re_optimize_dex_message">Re-optimize all scope Dex?</string>
    <string name="re_optimize_dex_completed">Optimization completed, it is recommended to restart the scope or system</string>
    <string name="re_optimize_dex_failed">Optimization failed</string>
    <string name="re_optimize_dex_optimizing">Optimizing</string>
    <string name="re_optimize_dex_faile_message">The following application optimization failed\n%1$s\nWhether to re-optimize?</string>
    <string name="optimize_dex_after_system_update">Dex must be optimized after system update</string>
    <string name="optimize_only_this_page_scope">Optimize only this page scope</string>
    <string name="restart_only_this_page_scope">Restart only this page scope</string>
    <string name="reboot">Restart System</string>
    <string name="fast_reboot">Fast reboot</string>
    <string name="menu_versioninfo">Version Information</string>
    <string name="scope_version_info">Scope version information</string>
    <string name="show_system_app">Show system APP</string>
    <string name="Android">System Related</string>
    <string name="app_label">App Name</string>
    <string name="package_name">Package Name</string>
    <string name="version">Version</string>
    <string name="remove_gms_usage_restrictions">Remove GMS usage restrictions</string>
    <string name="custom_remote_provisioning_hostname">Custom remote provisioning hostname</string>
    <string name="custom_remote_provisioning_hostname_summary">Set the proxy host used to obtain attestation certificates</string>
    <string name="replace_system_root_state_detection">Replace system root state detection</string>
    <string name="allow_untrusted_touch">Allow untrusted touch</string>
    <string name="allow_untrusted_touch_summary">Solve the problem that some windows or pages are blocked and cannot be touched</string>
    <string name="customized_gaussian_blur_effect_level">Customized gaussian blur effect level</string>
    <string name="disable_temperature_control_listener">Disable temperature control listener</string>
    <string name="set_ltpo_refresh_rate_mode">Set LTPO refresh rate mode</string>
    <string name="enable_full_brightness_refresh_rate_minimum_one">Enable full brightness refresh rate minimum 1</string>
    <string name="enable_full_brightness_refresh_rate_minimum_one_summary">Some models may conflict with Game Assistant, causing the screen to flicker.</string>
    <string name="disable_long_press_home_key_start_speech_asssist">Disable long press HOME key to start speech assistant</string>
    <string name="fps_tips">The self-start function will be triggered 1 s after the screen is unlocked</string>
    <string name="restore_default_refresh_rate">Restore default refresh rate</string>
    <string name="fps_autostart">Auto-start</string>
    <string name="fps_no_data">No FPS data, please check Root permission</string>
    <string name="quick_entry">System Quick Entry</string>
    <string name="quick_entry_summary">e.g. System UI reconciliation tools, process management, engineering mode, etc.</string>
    <string name="tile_list">Module built-in tile list</string>
    <string name="tile_list_summary">Quickly add tile to the control center</string>
    <string name="set_module_shortcuts">Set module shortcuts</string>
    <string name="set_module_shortcuts_summary">Long press on module icon to show enabled shortcuts</string>
    <string name="set_touch_sampling_rate_tile_level">Set the touch sampling rate tile level</string>
    <string name="set_touch_sampling_rate_tile_level_summary">Test by yourself whether each gear can be triggered normally\nWhen you use the game assistant to open the game, the current sampling rate will be overwritten.</string>
    <string name="remote_adb_debug_title">Remote ADB debugging</string>
    <string name="remote_adb_debug_summary">Please close it when not in use</string>
    <string name="display_refresh_rate">Show/Hide Refresh Rate</string>
    <string name="appinfo_sort_and_filter">Sort And Filter</string>
    <string name="appinfo_sort_by">Sort By</string>
    <string name="appinfo_filter">Filter</string>
    <string name="appinfo_reverse">Reverse</string>
    <string name="send_notification_permission">Send notification permission</string>
    <string name="all_files_access_permission">All file access permission</string>
    <string name="installed_apps_permission">Read your app list permission</string>
    <string name="install_app_permission">Install app permissions</string>
</resources>