<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:paddingVertical="16dp"
        android:paddingHorizontal="20dp"
        android:orientation="vertical">
    
    <com.google.android.material.chip.Chip
            android:id="@+id/notify_chip"
            android:text="@string/send_notification_permission"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:checkable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    
    <com.google.android.material.chip.Chip
            android:id="@+id/storage_chip"
            android:text="@string/all_files_access_permission"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:checkable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    
    <com.google.android.material.chip.Chip
            android:id="@+id/app_list_chip"
            android:text="@string/installed_apps_permission"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:checkable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    
    <com.google.android.material.chip.Chip
            android:id="@+id/install_app_chip"
            android:text="@string/install_app_permission"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:checkable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

</LinearLayout>
