<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    
    <LinearLayout
            android:paddingVertical="16dp"
            android:paddingHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        
        <com.google.android.material.textview.MaterialTextView
                android:layout_gravity="center_horizontal"
                android:text="@string/appinfo_sort_and_filter"
                android:textSize="18sp"
                android:layout_marginVertical="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        
        <LinearLayout
                android:id="@+id/sort_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                
                <com.google.android.material.textview.MaterialTextView
                        android:layout_weight="1"
                        android:text="@string/appinfo_sort_by"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                
                <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/sort_reverse"
                        android:text="@string/appinfo_reverse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
            
            </LinearLayout>
            
            <com.google.android.material.chip.ChipGroup
                    android:id="@+id/sort_chips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
        
        </LinearLayout>
        
        <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp" />
        
        <LinearLayout
                android:id="@+id/filter_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            
            <com.google.android.material.textview.MaterialTextView
                    android:text="@string/appinfo_filter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            
            <com.google.android.material.chip.ChipGroup
                    android:id="@+id/filter_chips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
        
        </LinearLayout>
    
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>