<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">
    
    <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        
        <ListView
                android:id="@+id/fps_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:visibility="gone" />
    
    </LinearLayout>
    
    <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout"
            app:layout_constraintBottom_toTopOf="@+id/control_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    
    <LinearLayout
            android:id="@+id/control_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:paddingHorizontal="16dp"
            android:orientation="vertical"
            android:animateLayoutChanges="true"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        
        <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/fps_self_start"
                android:text="@string/fps_autostart"
                android:enabled="false"
                android:paddingHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        
        <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/fps_show"
                android:text="@string/display_refresh_rate"
                android:enabled="false"
                android:paddingHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp">
            
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/fps_recover"
                    android:enabled="false"
                    android:text="@string/restore_default_refresh_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
        
        </LinearLayout>
        
        <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fps_tips"
                android:text="@string/fps_tips"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
    
    </LinearLayout>
    
    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fps_nodata_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:textSize="16sp"
            android:text="@string/fps_no_data"
            app:layout_constraintBottom_toTopOf="@+id/control_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
