<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    
    <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:animateLayoutChanges="true"
                android:paddingHorizontal="16dp"
                android:paddingVertical="?dialogPreferredPadding">
            
            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/quick_entry"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp">
                
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="10dp"
                        android:orientation="vertical">
                    
                    <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/quick_entry_title"
                            android:text="@string/quick_entry"
                            android:paddingHorizontal="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    
                    <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/quick_entry_summary"
                            android:textSize="11sp"
                            android:text="@string/quick_entry_summary"
                            android:paddingHorizontal="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                
                </LinearLayout>
            
            </com.google.android.material.card.MaterialCardView>
            
            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/tile_list"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp">
                
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="10dp"
                        android:orientation="vertical">
                    
                    <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tile_list_title"
                            android:text="@string/tile_list"
                            android:paddingHorizontal="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    
                    <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tile_list_summary"
                            android:textSize="11sp"
                            android:text="@string/tile_list_summary"
                            android:paddingHorizontal="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                
                </LinearLayout>
            
            </com.google.android.material.card.MaterialCardView>
            
            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/shortcut"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp">
                
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="10dp"
                        android:orientation="vertical">
                    
                    <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/shortcut_title"
                            android:text="@string/set_module_shortcuts"
                            android:paddingHorizontal="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    
                    <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/shortcut_summary"
                            android:textSize="11sp"
                            android:text="@string/set_module_shortcuts_summary"
                            android:paddingHorizontal="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                
                </LinearLayout>
            
            </com.google.android.material.card.MaterialCardView>
            
            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/fps"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:layout_marginVertical="8dp">
                
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="10dp"
                        android:animateLayoutChanges="true"
                        android:orientation="vertical">
                    
                    <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/fps_title"
                            android:paddingHorizontal="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    
                    <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/fps_summary"
                            android:textSize="11sp"
                            android:paddingHorizontal="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                
                </LinearLayout>
            
            </com.google.android.material.card.MaterialCardView>
            
            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/touch_panel"
                    android:clickable="true"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp">
                
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="10dp"
                        android:orientation="vertical">
                    
                    <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/touch_title"
                            android:text="@string/set_touch_sampling_rate_tile_level"
                            android:paddingHorizontal="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    
                    <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/touch_summary"
                            android:textSize="11sp"
                            android:text="@string/set_touch_sampling_rate_tile_level_summary"
                            android:paddingHorizontal="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                
                </LinearLayout>
            
            </com.google.android.material.card.MaterialCardView>
            
            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/remote_adb_debug"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:visibility="gone"
                    android:layout_marginVertical="8dp">
                
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="10dp"
                        android:orientation="vertical">
                    
                    <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/remote_adb_debug_title"
                            android:paddingHorizontal="10dp"
                            android:text="@string/remote_adb_debug_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    
                    <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/remote_adb_debug_summary"
                            android:textSize="11sp"
                            android:text="@string/remote_adb_debug_summary"
                            android:paddingHorizontal="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                
                </LinearLayout>
            
            </com.google.android.material.card.MaterialCardView>
        
        </LinearLayout>
    
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>